# Article_reader

./: .gitignore  README.md  app.py  pyproject.toml
python_gpt_agent/: .gitignore  README.md  __init__.py  api.py  app.py  main.py  pyproject.toml  requirements.txt
summarizer/: App.tsx  index.html  metadata.json  package.json  types.ts
summarizer/components/: Button.tsx  SummaryCard.tsx
summarizer/services/: api.ts
