[project]
name = "python-gpt-agent"
version = "0.1.0"
description = "Article summarization API and CLI"
requires-python = ">=3.10"
dependencies = [
  "agentbay @ git+https://github.com/AgentBay-AI/agentbay-python-sdk.git@b318baccbf9cf31f163ad3a5b847c28138c28a39",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.2",
  "aiosignal==1.4.0",
  "annotated-types==0.7.0",
  "anyio==4.11.0",
  "async-timeout==5.0.1",
  "attrs==25.4.0",
  "babel==2.17.0",
  "beautifulsoup4==4.14.2",
  "certifi==2025.10.5",
  "chardet==5.2.0",
  "charset-normalizer==3.4.4",
  "courlan==1.3.2",
  "cssselect==1.3.0",
  "dateparser==1.2.2",
  "distro==1.9.0",
  "exceptiongroup==1.3.0",
  "frozenlist==1.8.0",
  "googleapis-common-protos==1.72.0",
  "grpcio==1.76.0",
  "h11==0.16.0",
  "htmldate==1.9.4",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.11",
  "importlib_metadata==8.7.0",
  "jiter==0.11.1",
  "jusText==3.0.2",
  "lxml==6.0.2",
  "lxml_html_clean==0.4.3",
  "multidict==6.7.0",
  "openai==2.7.1",
  "opentelemetry-api==1.38.0",
  "opentelemetry-exporter-otlp==1.38.0",
  "opentelemetry-exporter-otlp-proto-common==1.38.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
  "opentelemetry-exporter-otlp-proto-http==1.38.0",
  "opentelemetry-instrumentation==0.59b0",
  "opentelemetry-proto==1.38.0",
  "opentelemetry-sdk==1.38.0",
  "opentelemetry-semantic-conventions==0.59b0",
  "packaging==25.0",
  "propcache==0.4.1",
  "protobuf==6.33.0",
  "psutil==7.1.3",
  "pydantic==2.12.4",
  "pydantic_core==2.41.5",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "pytz==2025.2",
  "readability-lxml==0.8.4.1",
  "regex==2025.11.3",
  "requests==2.32.5",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.8",
  "tld==0.13.1",
  "tqdm==4.67.1",
  "trafilatura==2.0.0",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzlocal==5.3.1",
  "urllib3==2.5.0",
  "wrapt==1.17.3",
  "yarl==1.22.0",
  "zipp==3.23.0",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "google-generativeai==0.8.3",
]

[project.optional-dependencies]
dev = []
